dedicated server bugs fixed and i add 26.1.1 and 26.1.2 support