@@ -167,6 +167,9 @@ minecraft {
         configureEach {
             workingDir.convention layout.projectDirectory.dir('run')
             args "--mixin.config=${project.mod_id}.forge.mixins.json"
+    systemProperty 'io.netty.tryReflectionSetAccessible', 'true'
+    jvmArgs '--enable-native-access=ALL-UNNAMED,io.netty.common'
+    jvmArgs '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED,io.netty.common'
         }
 
         register('client') {
